# wm_be

./: .env.local  .gitignore  Cargo.toml  README.md  rustfmt.toml
contrib/dev/init/: install-local.sh
migrations/mysql/: 20240109135042_users.sql  20240109135312_user_profiles.sql  20240116085848_rooms.sql  20240119041220_shelf.sql  20240119042235_items.sql  20240119042627_stock.sql
migrations/postgres/: 20240109135040_fn.sql  20240109135042_users.sql  20240109135130_user_authentication.sql  20240109135312_user_profiles.sql  20240116085848_rooms.sql  20240119041220_shelf.sql  20240119042235_items.sql  20240119042627_stock.sql
migrations/sqlite3/: 20240109135042_users.sql  20240109135130_user_authentication.sql  20240109135312_user_profiles.sql  20240116085848_rooms.sql  20240119041220_shelf.sql  20240119041220_shelfs.sql  20240119042235_items.sql  20240119042627_shelf_items.sql  20240119042627_stock.sql
share/default/config/: index.development.sqlite3.toml  index.development.toml
src/: app.rs  common.rs  config.rs  errors.rs  lib.rs  mailer.rs  main.rs
src/bootstrap/: config.rs
src/databases/: database.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/models/: category.rs  file.rs  item.rs  mod.rs  permission.rs  role.rs  room.rs  shelf.rs  user.rs
src/services/: about.rs  authentication.rs  item.rs  mod.rs  room.rs  shelf.rs  stock.rs  user.rs
src/utils/: mod.rs  validation.rs
src/web/api/: mod.rs  server.rs
src/web/api/v1/: auth.rs  mod.rs  responses.rs  routes.rs
src/web/api/v1/contexts/: mod.rs
src/web/api/v1/contexts/about/: handlers.rs  routes.rs
src/web/api/v1/contexts/evt/: mod.rs  sse.rs  wss.rs
src/web/api/v1/contexts/item/: forms.rs  handlers.rs  mod.rs  responses.rs  routes.rs
src/web/api/v1/contexts/room/: errors.rs  forms.rs  handlers.rs  responses.rs  routes.rs
src/web/api/v1/contexts/shelf/: forms.rs  handlers.rs  responses.rs  routes.rs
src/web/api/v1/contexts/stock/: forms.rs  handlers.rs  mod.rs  routes.rs
src/web/api/v1/contexts/user/: forms.rs  handlers.rs  mod.rs  responses.rs  routes.rs
src/web/api/v1/extractors/: bearer_token.rs
