# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wm"
readme = "README.md"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[workspace.package]
authors = ["Jonir Rings <info@jonirrings.com>"]
categories = ["network-programming", "web-programming"]
description = "A Warehouse Management"
documentation = ""
edition = "2021"
homepage = ""
keywords = ["warehouse"]
license = "AGPL-3.0-only"
publish = true
repository = "https://github.com/jonirrings/wm_be"
rust-version = "1.75"
version = "0.1.0"

[dependencies]
argon2 = "0.5.2"
async-graphql = "6.0.11"
async-trait = "0.1.77"
axum = { version = "0.7.3", features = ["multipart", "http2", "ws", 'tracing'] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
config = "0.13.4"
fern = "0.6.2"
futures = "0.3.30"
hyper = "1.1.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
located-error = { path = "packages/located-error" }
log = "0.4.20"
rustversion = "1.0.14"
serde = { version = "1", features = ["rc"] }
serde_bencode = "0"
serde_bytes = "0"
serde_derive = "1"
serde_json = "1"
sha-1 = "0"
sqlx = { version = "0.7", features = ["migrate", "mysql", "sqlite", "postgres", "runtime-tokio-native-tls", "time"] }
thiserror = "1.0.56"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.5.0", features = ["compression-full", "cors", "timeout", "trace"] }

[dev-dependencies]
rand = "0"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
which = "5"
